LxRow: label overflow fix (#1119)

--- a/public/styles/lx-forms-grid.css
+++ b/public/styles/lx-forms-grid.css
@@ -29,6 +29,14 @@
   align-items: center;
 }
 
+.lx-form-grid>header>.lx-group .lx-toolbar-chip>.lx-state {
+  padding: 0;
+}
+
+.lx-form-grid>header>.lx-group .lx-info-wrapper {
+  padding-top: 0.375rem;
+}
+
 .lx-form-grid>header>.lx-group .lx-toolbar-chip {
   padding: 0 1rem 0 1rem;
   align-items: center;
@@ -52,7 +60,8 @@
   margin-right: var(--gap);
 }
 
-.lx-form-grid>header>.lx-group .lx-info-wrapper-content:hover .lx-toolbar-chip {
+.lx-form-grid>header>.lx-group .lx-info-wrapper:hover .lx-toolbar-chip,
+.lx-form-grid>header>.lx-group .lx-info-wrapper:hover .lx-toolbar-chip>.lx-state {
   background-color: var(--color-grid-hover-background);
   cursor: help;
 }
@@ -73,6 +82,7 @@
 .lx-form-grid>footer {
   min-height: var(--row-size);
   padding: var(--gap) var(--gap-form);
+  padding-left: calc(var(--gap-form) + 2px);
   border-top: 1pt solid var(--color-chrome);
   display: grid;
   grid-template-columns: auto 1fr auto;
@@ -245,6 +255,7 @@
 .lx-form-grid>.lx-main>.lx-form-section>header,
 .lx-form-grid>.lx-main>.lx-expander>.lx-body>.lx-form-section>header {
   grid-column: 1 / -1;
+  padding-left: 2px;
 }
 
 .lx-form-grid>.lx-tab-control>.lx-tab-body>.lx-main>.lx-form-section>header {
@@ -263,6 +274,7 @@
   max-width: 100%;
   display: inline-block;
   text-overflow: ellipsis;
+  overflow: hidden;
   white-space: nowrap;
   color: var(--color-label);
   transition: background-color 0.5s ease;
@@ -272,11 +284,14 @@
 .lx-form.lx-form-2 .lx-row>label,
 .lx-form.lx-form-3 .lx-row>label,
 .lx-form-grid>.lx-main .lx-row>label,
-.lx-form-grid>.lx-tab-control>.lx-tab-body>.lx-main .lx-row>label,
+.lx-form-grid>.lx-tab-control>.lx-tab-body>.lx-main .lx-row>.lx-row-header>label,
 .lx-form-grid>.lx-main .lx-row>.lx-row-header>label,
 .lx-row>.lx-row-header>.lx-info-wrapper label {
   color: var(--color-label);
   font-size: var(--label-font-size);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .lx-form-grid>.lx-main .lx-row>div.lx-vertical,
@@ -960,6 +975,8 @@ p .lx-person-display-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: end;
+  overflow: hidden;
+  padding: 0 2px;
 }
 
 .lx-form-grid .lx-row>.lx-row-header>.lx-info-wrapper.lx-info-slot-wrapper label svg {
